traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:16: error: not found: value d
       for (i <- 1 to d-1){
                      ^TraversalDiagonal:22: error: not found: value d
       d-=1
       ^